--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
 
   <body>
-    <h1>I am Evan T. Grahn, it's me.</h1>
+    <h1>I am Evan T. Grahn.</h1>
+    <h1>This website is currently under construction.</h1>
   </body>
 
 </html>
