--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1>I am Evan T. Grahn.</h1>
+    <h1>Hi I'm Evan.</h1>
     <h1>This website is currently under construction.</h1>
   </body>
 
