--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 
   <head>
-    <title>Evan T. Grahn</title>
+    <meta charset='utf-8'>
+    <title>ETG - Home</title>
+
+    <link rel='icon' href='images/favicon.png'>
   </head>
 
   <body>
